fixing the navbar not responsive issue… again

--- a/assets/css/tapangi.css
+++ b/assets/css/tapangi.css
@@ -147,6 +147,9 @@ p {
         background: #ffffff;
         color: #1a51aa; }
 
+@media (max-width: 979px) {
+  .navbar.navbar-fixed-top {
+    position: static; } }
 @media (max-width: 767px) {
   .navbar.navbar-fixed-top {
     position: static; }
