--- a/src/css/navbar.scss
+++ b/src/css/navbar.scss
@@ -61,6 +61,15 @@ $navbar-height-collapse: 40px;
 
 }
 
+@media (max-width: 979px) {
+  .navbar {
+    &.navbar-fixed-top {
+      position: static;
+      //margin-bottom: 18px;
+    }
+  }
+}
+
 @media (max-width: 767px) {
 
   .navbar {
